--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,10 +64,9 @@ html {
 body {
   /* background-image: linear-gradient(rgba(0, 0, 0, 0.881), rgba(0, 0, 0, 0.84)),
     url(/assets/img/bg.jpg); */
-  background-attachment: fixed;
+
   background-color: #111;
-  background-size: cover;
-  background-repeat: no-repeat;
+  height: 100vh;
 }
 h1,
 h2,
@@ -4038,8 +4037,7 @@ img.road_img {
       url(/assets/img/bg1.avif); */
     /* background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
       url(/assets/img/bg.jpg); */
-    background-attachment: fixed;
-    background-position: center;
+
     background-color: #111;
   }
 }
